Fixed layout problem.

--- a/src/components/cwc-navigation/cwc-navigation.scss
+++ b/src/components/cwc-navigation/cwc-navigation.scss
@@ -7,6 +7,13 @@ cwc-navigation.hydrated {
     width: inherit;
     z-index: 300;
     transition: height 0.25s ease-in-out;
+
+
+    .cwc-navigation-inner {
+        display: flex;
+        align-items: start;
+    }
+
 }
 
 .invisible {
